CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(tsnc LANGUAGES C VERSION 0.0.0)

SET(TSNC_LIBRARY_NAME tsnc)
SET(TSNC_EXECUTABLE_NAME tsnc-bin)

INCLUDE_DIRECTORIES(include/)

SET(PROJECT_SOURCE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

ADD_LIBRARY(${TSNC_LIBRARY_NAME}
  ${PROJECT_SOURCE_SOURCE_DIR}/program.c
  ${PROJECT_SOURCE_SOURCE_DIR}/source.c
  ${PROJECT_SOURCE_SOURCE_DIR}/vector.c
  ${PROJECT_SOURCE_SOURCE_DIR}/token.c
  ${PROJECT_SOURCE_SOURCE_DIR}/token-stream.c
  ${PROJECT_SOURCE_SOURCE_DIR}/tokenizer.c
  ${PROJECT_SOURCE_SOURCE_DIR}/report.c
  ${PROJECT_SOURCE_SOURCE_DIR}/parser.c
  ${PROJECT_SOURCE_SOURCE_DIR}/ast.c
)

ADD_EXECUTABLE(${TSNC_EXECUTABLE_NAME}
  ${PROJECT_SOURCE_SOURCE_DIR}/tsnc.c
)

SET_TARGET_PROPERTIES(
      ${TSNC_LIBRARY_NAME} PROPERTIES C_STANDARD 99 SOVERSION ${PROJECT_VERSION_MAJOR})
SET_TARGET_PROPERTIES(${TSNC_EXECUTABLE_NAME} PROPERTIES C_STANDARD 99)

TARGET_LINK_LIBRARIES(${TSNC_EXECUTABLE_NAME} ${TSNC_LIBRARY_NAME})

SET(TSNC_COMPILE_OPTIONS -Wall -Wextra -Wpedantic -Werror -Wno-sometimes-uninitialized -Wno-sign-compare)
TARGET_COMPILE_OPTIONS(${TSNC_LIBRARY_NAME} PRIVATE ${TSNC_COMPILE_OPTIONS})
TARGET_COMPILE_OPTIONS(${TSNC_EXECUTABLE_NAME} PRIVATE ${TSNC_COMPILE_OPTIONS})
