PROJECT(tsnc-run-tests)

SET(TEST_SOURCE_FILES
    run-tests.c
    test-tokenizer.c
    test-parser.c)

ADD_TEST(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})

GET_FILENAME_COMPONENT(PARENT_DIR ../ ABSOLUTE)

SET(TEST_INCLUDE_DIRECTORIES ${PARENT_DIR}/libtap)

TARGET_INCLUDE_DIRECTORIES(
  ${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${TEST_INCLUDE_DIRECTORIES}>")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME} tap.a)
TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC ${PARENT_DIR}/libtap)
